--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -153,7 +153,6 @@ video.responsive-video {
 
     i {
       font-size: 2rem;
-      line-height: 1.8rem;
     }
   }
 }
